[metadata]
name = tk-cyberpunk-theme
version = attr: tk_cyberpunk_theme.version.__version__
url = https://github.com/pyrustic/tk-cyberpunk-theme
author = Pyrustic Evangelist
author_email = pyrustic@protonmail.com
maintainer = Pyrustic Evangelist
maintainer_email = pyrustic@protonmail.com
description = The cyberpunk default theme for Pyrustic Framework
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords =
    theme
    cyberpunk
    dark-theme
    desktop-application
    tkinter
    graphical
    dark-theme

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.5
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    pyrustic

[options.entry_points]
console_scripts =
    pyrustic = tk_cyberpunk_theme.__main__:main
