[metadata]
name = cyberpunk-theme
version = file: VERSION
url = https://github.com/pyrustic/cyberpunk-theme
author = Pyrustic Evangelist
author_email = pyrustic@protonmail.com
maintainer = Pyrustic Evangelist
maintainer_email = pyrustic@protonmail.com
description = Dark theme for Python desktop app
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords =
    theme
    cyberpunk
    dark-theme
    desktop-application
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.5
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    themebase
    stylebase

[options.entry_points]
console_scripts =
    cyberpunk-theme = cyberpunk_theme.__main__:main
